rework home page dashboard

--- a/src/app/account/account-list/account-list.component.html
+++ b/src/app/account/account-list/account-list.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="row">
   <div class="col-md-4 offset-md-1">
     <div class="input-group">
@@ -24,9 +25,7 @@
         </div>
       </div>
       <div class="col col-md-2 actions-col">
-        <button class="btn btn-outline-primary action" (click)="viewDetails(account.key)" type="button">
-          <ion-icon class="icon" name="arrow-round-forward"></ion-icon>
-        </button>
+          <button mat-raised-button class="submit-button" color="primary" (click)="viewDetails(account.key)" type="button">Update</button>
       </div>
     </div>
   </div>
