--- a/src/app/home/components/category-summary/category-summary.component.html
+++ b/src/app/home/components/category-summary/category-summary.component.html
@@ -11,6 +11,5 @@
       </ng-container>
     </select>
   </mat-select>
-  <div class="container">
-  </div>
+  <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
   </div>
